--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,9 +13,8 @@
         <%- include('partials/nav') %>
         <%- include('partials/indexhome') %>
         <%- include('partials/ServerInfo') %>
-        <%- include('partials/topUsers') %>
-        <%- include('partials/ServerStatus') %>
-<%- include('partials/footer') %>
+        <%- include('partials/pricing') %>
+        <%- include('partials/footer') %>
     </div>
 
     <script>
