--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -36,7 +36,7 @@
                     <img src="/img/modded-favicon.ico" alt="Logo" class="w-10 h-10 rounded-lg shadow-lg">
                     <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-400 via-red-500 to-red-600">Vazha MC</span>
                 </h3>
-                <p class="text-base md:text-lg text-gray-200">Experience Minecraft like never before with our curated mod packs!</p>
+                <p class="text-base md:text-lg text-gray-200">A custom discord bot and website developing area - shotdevs p>
             </div>
   
             <!-- Quick Links Section -->
@@ -54,9 +54,9 @@
             <div class="footer-card p-6 md:p-8 rounded-2xl shadow-lg">
                 <h3 class="text-xl md:text-2xl font-bold mb-4 text-red-400">Connect</h3>
                 <ul class="space-y-3">
-                    <li><a href="https://discord.gg/EY48TztpNu" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-discord-logo"></i> Discord</a></li>
-                    <li><a href="https://youtube.com/@vazhamc5372?si=YlAzDaf9n0CE0brj" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-youtube-logo"></i> YouTube</a></li>
-                    <li><a href="https://www.instagram.com/vazhamc?igsh=d3hiaWYyZGVwdWlp" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-instagram-logo"></i> Instagram</a></li>
+                    <li><a href="https://discord.gg/T55TGSa9ha" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-discord-logo"></i> Discord</a></li>
+                    <li><a href="https://youtube.com/" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-youtube-logo"></i> YouTube</a></li>
+                    <li><a href="https://www.instagram.com/" class="text-base md:text-lg text-gray-200 hover:text-red-400 transition-colors flex items-center gap-2"><i class="ph ph-instagram-logo"></i> Instagram</a></li>
                 </ul>
             </div>
         </div>
