--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -34,7 +34,7 @@
             <div class="footer-card p-6 md:p-8 rounded-2xl shadow-lg">
                 <h3 class="text-xl md:text-2xl font-bold mb-4 flex items-center space-x-3">
                     <img src="/img/modded-favicon.ico" alt="Logo" class="w-10 h-10 rounded-lg shadow-lg">
-                    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-400 via-red-500 to-red-600">Vazha MC</span>
+                    <span class="bg-clip-text text-transparent bg-gradient-to-r from-red-400 via-red-500 to-red-600">Shot devs</span>
                 </h3>
                 <p class="text-base md:text-lg text-gray-200">A custom discord bot and website developing area - shotdevs p>
             </div>
