--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -108,6 +108,9 @@
                 <a href="/status" class="block nav-link py-2 px-4 rounded-full hover:bg-red-500/10 transition-all duration-300">
                     <i class="ph ph-chart-line mr-2"></i>Status
                 </a>
+                <a href="/api/v1/docs" class="block nav-link py-2 px-4 rounded-full hover:bg-red-500/10 transition-all duration-300">
+                    <i class="ph ph-book-open mr-2"></i>API Docs
+                </a>
                 
                 <!-- Mobile User Actions -->
                 <% if (user) { %>
